--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <section>
+      <a href="advice\davon-riley-advice.html">Da'von's Advice</a><br>
       <a href="advice/samantha-engle-advice.html">Sam's Section</a><br>
       <a href="advice/lee-cart-advice.html">Lee's Cart</a><br>
       <a href="advice/janena-reynolds-advice.html">Janena's Lessons to Grow</a><br>
